fix: tighten mmc divider spacing

--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,8 @@
 }
 
 .factor-board__left {
-  padding-right: 11%;
+  padding-right: 3%;
+  text-align: right;
 }
 
 .factor-board__right {
